--- a/vixcarolyn.vix.css
+++ b/vixcarolyn.vix.css
@@ -1,5 +1,5 @@
 /*!
- * Vix & Carolyn Bootstrap - Vix Scala Theme (2020-09-08)
+ * Vix & Carolyn Bootstrap - Vix Scala Theme (2020-11-14)
  * Copyright 2020 Voltex Pixel (https://voltexpixel.com/)
  * Vix & Carolyn: https://vixandcarolyn.voltexpixel.com/
  * Based on Stylish Portfolio
@@ -136,7 +136,7 @@ h6 {
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
-.masthead video {
+.masthead .masthead-media {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -152,7 +152,7 @@ h6 {
   transform: translateX(-50%) translateY(-50%);
 }
 
-.masthead iframe {
+.masthead .masthead-iframe {
   position: absolute;
   top: 50%;
   left: 50%;
